# personal-portfolio

./: .dockerignore  .gitignore  .terraform.lock.hcl  README.md  bootstrap.sh  gemini.md  pyproject.toml
.github/workflows/: deploy.yml
app/: Dockerfile  app.py  auth.py  conf.py  dashboard.py  pyproject.toml
app/dash_app/: callbacks.py  cloud_storage.py  display_table.py  utils.py
app/dash_app/assets/: logo_loader.css  styles.css
app/dash_app/assets/data/: 2023_world_population.csv  quotes.csv  resume.json  shows.csv  taylor_swift_songs.csv  traffic_daily.csv
app/dash_app/pages/: ai.py  dashboard.py  elevenlabs.js  home.py  sales_enablement.py
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  secrets.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/firewall/: main.tf  variables.tf
infrastructure/modules/server_vm/: main.tf  variables.tf
infrastructure/scripts/: Dockerfile.tftpl  deploy.yml.tftpl  docker-compose.yml.tftpl  startup.sh.tftpl
infrastructure/scripts/nginx/conf.d/: default-http.conf.tftpl  default-ssl.conf.tftpl
